--- a/style.css
+++ b/style.css
@@ -91,11 +91,12 @@ div.questions a.btn{
   font-size: 20px;
 }
 
+div.questions a.btn:hover{
+  background-color: #0069d9;
+  border-color: #0069d9;
+}
+
 /*
-
-
-
-#### 
 
 
 #### `div.questions a.btn:hover`
