--- a/style.css
+++ b/style.css
@@ -81,6 +81,10 @@ div.questions h4{
   margin-bottom: 10px;
 }
 
+div.questions p{
+  margin-top: 30px;
+}
+
 div.questions a.btn{
   border-radius: 5px;
   color: #fff;
